# FreeSurfaceLBM

./: .gitignore  LICENSE  README.md
docs/: project_report.tex  refs.bib
src/: .clang-format  CMakeLists.txt  ConfigParser.hpp  LBDefinitions.hpp  LBMHelper.cpp  LBMHelper.hpp  VtkWriter.cpp  VtkWriter.hpp  boundary.cpp  boundary.hpp  collision.cpp  collision.hpp  computeCellValues.cpp  computeCellValues.hpp  freeSurface.cpp  freeSurface.hpp  initLB.cpp  initLB.hpp  main.cpp  parallel.cpp  parallel.hpp  streaming.cpp  streaming.hpp  timeStep.cpp  timeStep.hpp
src/scenarios/: CornerDamBreak.cpp  CornerDamBreak.hpp  DamBreak.cpp  DamBreak.hpp  FallingDrop.cpp  FallingDrop.hpp  HoleInContainer.cpp  HoleInContainer.hpp  MiddleWall.cpp  MiddleWall.hpp  MultipleDrops.cpp  MultipleDrops.hpp  OnlyWater.cpp  OnlyWater.hpp  Scenario.hpp  empty  step  tilted_plate
